refactor: migrate WebSocket API to JSON-RPC style protocol
- Replace custom message types with JSON-RPC request/response format
  (id, method, params for requests; id, result/error for responses)
- Add ticker and lwt (last/bid/ask/mark) channel notifications
- Change trade data format from objects to tuples for efficiency
- Add 4h and 1d intervals to OHLCV candle updates
- Persist OHLCV directly on fill settlement for reliability
- Add dotenvy for .env file loading across services
- Simplify frontend order fill tracking and remove unused useOrderBook hook
- Update trading bot and e2e tests for new protocol

--- a/udp_proto/Cargo.toml
+++ b/udp_proto/Cargo.toml
@@ -11,6 +11,7 @@ parking_lot = "0.12"
 crossbeam-channel = "0.5"
 flatbuffers = "24.3"
 uuid = { version = "1", features = ["v4"] }
+socket2 = { version = "0.5", features = ["all"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full", "test-util"] }
