--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -37,6 +37,9 @@ thiserror = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
+# Environment
+dotenvy = "0.15"
+
 [[bin]]
 name = "gateway"
 path = "src/main.rs"
