--- a/matching_engine_service/Cargo.toml
+++ b/matching_engine_service/Cargo.toml
@@ -37,3 +37,6 @@ thiserror = "1"
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Environment
+dotenvy = "0.15"
