--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,5 +125,35 @@ services:
       retries: 5
       start_period: 30s
 
+  frontend:
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
+      args:
+        VITE_GATEWAY_URL: ws://localhost:5173/ws
+        VITE_API_URL: http://localhost:5173
+    depends_on:
+      gateway:
+        condition: service_healthy
+    ports:
+      - "5173:80"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  trading-bot:
+    build:
+      context: .
+      dockerfile: trading_bot/Dockerfile
+    depends_on:
+      gateway:
+        condition: service_healthy
+      accounts:
+        condition: service_healthy
+    command: ["--gateway-host", "gateway", "--gateway-port", "3000", "--all"]
+    restart: unless-stopped
+
 volumes:
   postgres_data:
