--- a/market_data/Cargo.toml
+++ b/market_data/Cargo.toml
@@ -12,7 +12,7 @@ futures-util = "0.3"
 url = "2"
 
 # Database
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal", "tls-rustls"] }
 
 # HTTP server
 axum = "0.7"
